--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -143,6 +143,10 @@
     </div>
   </mat-card>
 
+  <div class="set-12">
+    <div class="app-footer"></div>
+  </div>
+
   <!-- <div class="set-12 mb-page">
     <mat-card class="set-12">
       <div class="set-2">
