--- a/src/app/components/app-footer/app-footer.component.scss
+++ b/src/app/components/app-footer/app-footer.component.scss
@@ -3,9 +3,6 @@
   float: left;
   padding: 20px 40px;
   background: #D9D9D9;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
   font-size: 9pt;
 
   * {
@@ -15,6 +12,10 @@
   img {
     width: 5% !important;
     margin-right: 10px;
+  }
+
+  .fixdesk {
+    text-align: center;
   }
 
   .fixmobile {
