--- a/src/app/public-documents/solution/solution.component.html
+++ b/src/app/public-documents/solution/solution.component.html
@@ -1,69 +1,29 @@
-<div class="set-12 loading" *ngIf="!isDataAvailable">
+<div class="set-12 loading" *ngIf="solution == null">
   <mat-spinner></mat-spinner>
 </div>
 
-<div class="set-12" *ngIf="isDataAvailable">
+<div class="set-12" *ngIf="solution != null">
   <div class="set-12">
     <breadcrumbs-component>
       <li>...</li>
-      <li
-        [matTooltip]="document.title"
-        matTooltipClass="tooltip"
-        (click)="utilityService.linkMe('/documentos-publicos/' + document._id)"
-      >
-        <!-- {{ document.title }} -->
+      <li [matTooltip]="document?.title" matTooltipClass="tooltip"
+        (click)="utilityService.linkMe('/documentos-publicos/' + document._id)">
         ...
       </li>
-      <li
-        [matTooltip]="category.category.name"
-        matTooltipClass="tooltip"
-        (click)="
-          utilityService.linkMe(
-            '/documentos-publicos/' +
-              document._id +
-              '/categoria/' +
-              category._id
-          )
-        "
-      >
+      <li [matTooltip]="category?.category?.name" matTooltipClass="tooltip"
+        (click)="utilityService.linkMe('/documentos-publicos/' + document._id + '/categoria/' + category._id)">
         ...
-        <!-- {{ category.category.name }} -->
       </li>
-      <li
-        [matTooltip]="subcategory.category.name"
-        matTooltipClass="tooltip"
+      <li [matTooltip]="subcategory?.category?.name" matTooltipClass="tooltip"
         (click)="
-          utilityService.linkMe(
-            '/documentos-publicos/' +
-              document._id +
-              '/categoria/' +
-              category._id +
-              '/subcategoria/' +
-              subcategory._id
-          )
-        "
-      >
-        {{ subcategory.category.name }}
+          utilityService.linkMe('/documentos-publicos/' + document._id + '/categoria/' + category._id + '/subcategoria/' + subcategory._id)">
+        {{ subcategory?.category?.name }}
       </li>
-      <li
-        [matTooltip]="topic.title"
-        matTooltipClass="tooltip"
-        (click)="
-          utilityService.linkMe(
-            '/documentos-publicos/' +
-              document._id +
-              '/categoria/' +
-              category._id +
-              '/subcategoria/' +
-              subcategory._id +
-              '/tema/' +
-              topic._id
-          )
-        "
-      >
+      <li [matTooltip]="topic?.title" matTooltipClass="tooltip"
+        (click)=" utilityService.linkMe('/documentos-publicos/' + document._id + '/categoria/' + category._id + '/subcategoria/' + subcategory._id + '/tema/' + topic._id)">
         {{ topic.shortTitle }}
       </li>
-      <li [matTooltip]="solution.title" matTooltipClass="tooltip">
+      <li [matTooltip]="solution?.title" matTooltipClass="tooltip">
         {{ solution.shortTitle }}
       </li>
     </breadcrumbs-component>
@@ -86,10 +46,8 @@
   <div class="set-12 txt-left" style="margin-bottom: 10px">
     <span class="created-by">
       Autor:
-      <span class="author"
-        >{{ solution.createdBy.firstname }}
-        {{ solution.createdBy.lastname }}</span
-      >
+      <span class="author">{{ solution.createdBy.firstname }}
+        {{ solution.createdBy.lastname }}</span>
     </span>
   </div>
 
@@ -113,12 +71,7 @@
                 </div>
 
                 <div class="set-12 vote-status">
-                  <button
-                    *ngIf="!userVoted"
-                    mat-raised-button
-                    color="accent"
-                    (click)="openModalVote()"
-                  >
+                  <button *ngIf="!userVoted" mat-raised-button color="accent" (click)="openModalVote()">
                     <strong>Votar</strong>
                   </button>
                   <mat-spinner diameter="20" *ngIf="submitted"></mat-spinner>
@@ -129,55 +82,26 @@
 
           <div class="infohldr">
             <h3>{{ solution.title }}</h3>
-            <expanded-text
-              [text]="solution.description"
-              [title]="solution.title"
-            ></expanded-text>
+            <expanded-text [text]="solution.description" [title]="solution.title"></expanded-text>
           </div>
 
           <div class="icons">
-            <button
-              type="button"
-              mat-mini-fab
-              color="warn"
-              matTooltip="Agregar a favoritos"
-              matTooltipClass="tooltip"
-              (click)="addFavorites()"
-              *ngIf="!isFavorites"
-            >
+            <button type="button" mat-mini-fab color="warn" matTooltip="Agregar a favoritos" matTooltipClass="tooltip"
+              (click)="addFavorites()" *ngIf="!isFavorites">
               <mat-icon>favorite</mat-icon>
             </button>
 
-            <button
-              type="button"
-              mat-mini-fab
-              color="accent"
-              matTooltip="Agregar a favoritos"
-              matTooltipClass="tooltip"
-              (click)="removeFavorites()"
-              *ngIf="isFavorites"
-            >
+            <button type="button" mat-mini-fab color="accent" matTooltip="Agregar a favoritos" matTooltipClass="tooltip"
+              (click)="removeFavorites()" *ngIf="isFavorites">
               <mat-icon>favorite</mat-icon>
             </button>
 
-            <button
-              type="button"
-              mat-mini-fab
-              color="warn"
-              matTooltip="Agregar Comentario"
-              matTooltipClass="tooltip"
-              (click)="popAddCommentsDialog()"
-            >
+            <button type="button" mat-mini-fab color="warn" matTooltip="Agregar Comentario" matTooltipClass="tooltip"
+              (click)="popAddCommentsDialog()">
               <mat-icon>add_comment</mat-icon>
             </button>
-            <button
-              type="button"
-              mat-mini-fab
-              color="warn"
-              matTooltip="Agregar Testimonio"
-              matTooltipClass="tooltip"
-              (click)="openModalTestimony()"
-            >
+            <button type="button" mat-mini-fab color="warn" matTooltip="Agregar Testimonio" matTooltipClass="tooltip"
+              (click)="openModalTestimony()">
               <mat-icon>book</mat-icon>
             </button>
           </div>
@@ -200,9 +124,7 @@
     </div>
 
     <div class="set-3">
-      <public-documents-testimonials
-        [data]="solution.testimonials"
-      ></public-documents-testimonials>
+      <public-documents-testimonials [data]="solution.testimonials"></public-documents-testimonials>
     </div>
   </div>
 </div>
