--- a/src/app/public-documents/category/category.component.html
+++ b/src/app/public-documents/category/category.component.html
@@ -1,18 +1,19 @@
-<div class="set-12 loading" *ngIf="!isDataAvailable">
+<div class="set-12 loading" *ngIf="selectedCategory == null">
   <mat-spinner></mat-spinner>
 </div>
 
-<div class="set-12" *ngIf="isDataAvailable && !isMobile">
+<div class="set-12" *ngIf="selectedCategory != null && !isMobile">
   <breadcrumbs-component>
     <li>Documentos</li>
     <li *ngIf="!!document.title; else noTitle" (click)="utilityService.linkMe('/documentos-publicos/' + document._id)">
-      {{ titles[0] }}
+      {{ document.title }}
     </li>
     <ng-template #noTitle>
       <div>categoria</div>
     </ng-template>
-    <li>{{ titles[1] }}</li>
+    <li>{{ selectedCategory.category.name }}</li>
   </breadcrumbs-component>
+
   <div class="set-12 author-hldr">
     <span class="created-by">
       Autor: <span class="author">
@@ -53,8 +54,6 @@
 
     <div class="set-9 col-rgt">
       <mat-card>
-        <!-- <panel-circles [data]="selectedCategory.subLayouts" [withBorder]="true" [redirectTo]="'SUBCATEGORY'">
-        </panel-circles> -->
         <div class="subcategory-bars" [document_id]="document._id" [category_id]="categoryID"
           [coverageSelected]="coverageSelected" [layouts]="layouts" (sendLayoutData)="getLayoutData($event)"></div>
 
@@ -85,6 +84,6 @@
   </div>
 </div>
 
-<div class="set-12" *ngIf="isDataAvailable && isMobile">
+<div class="set-12" *ngIf="selectedCategory != null && isMobile">
   <div class="public-document-mobile-category-view" [category]="selectedCategory"></div>
 </div>
