--- a/src/app/public-documents/topic/topic.component.html
+++ b/src/app/public-documents/topic/topic.component.html
@@ -1,38 +1,23 @@
-<div class="set-12 loading" *ngIf="!isDataAvailable">
+<div class="set-12 loading" *ngIf="topic == null">
   <mat-spinner></mat-spinner>
 </div>
 
-<div class="set-12" *ngIf="isDataAvailable">
+<div class="set-12" *ngIf="topic != null">
   <div class="set-12">
     <breadcrumbs-component>
       <li>...</li>
-      <li [matTooltip]="document.title" matTooltipClass="tooltip" (click)="
-          utilityService.linkMe('/documentos-publicos/' + document._id)
-        ">
+      <li [matTooltip]="document.title" matTooltipClass="tooltip"
+        (click)="utilityService.linkMe('/documentos-publicos/' + document._id)">
         ...
-        <!-- {{ document.title }} -->
       </li>
-      <li [matTooltip]="category.category.name" matTooltipClass="tooltip" (click)="
-          utilityService.linkMe(
-            '/documentos-publicos/' +
-              document._id +
-              '/categoria/' +
-              category._id
-          )
-        ">
-        {{ titles[1] }}
+      <li [matTooltip]="category?.category?.name" matTooltipClass="tooltip" (click)="
+          utilityService.linkMe('/documentos-publicos/' + document._id + '/categoria/' + category._id)">
+        {{ category?.category?.name }}
       </li>
-      <li [matTooltip]="subcategory.category.name" matTooltipClass="tooltip" (click)="
-          utilityService.linkMe(
-            '/documentos-publicos/' +
-              document._id +
-              '/categoria/' +
-              category._id +
-              '/subcategoria/' +
-              subcategory._id
-          )
-        ">
-        {{ titles[2] }}
+      <li [matTooltip]="subcategory?.category?.name" matTooltipClass="tooltip"
+        (click)="
+          utilityService.linkMe('/documentos-publicos/' + document._id + '/categoria/' + category._id + '/subcategoria/' + subcategory._id)">
+        {{ subcategory?.category?.name }}
       </li>
       <li [matTooltip]="topic.shortTitle" matTooltipClass="tooltip">
         {{ topic.shortTitle }}
@@ -49,21 +34,6 @@
       </span>
     </div>
   </div>
-
-  <!-- <div class="set-12 txt-right">
-    <button *ngIf="permission" type="button" mat-mini-fab color="accent" class="mini" matTooltip="Agregar Solución"
-      (click)="openModalSolution()">
-      <mat-icon>feedback</mat-icon>
-    </button>
-    <button type="button" mat-mini-fab color="primary" class="mini" matTooltip="Agregar Comentario"
-      (click)="openModalComment()">
-      <mat-icon>add_comment</mat-icon>
-    </button>
-    <button type="button" mat-mini-fab color="warn" class="mini" matTooltip="Agregar Testimonio"
-      (click)="openModalTestimony()">
-      <mat-icon>book</mat-icon>
-    </button>
-  </div> -->
 
   <div class="set-12">
     <div class="set-9 col-lft">
@@ -134,64 +104,4 @@
       </public-documents-testimonials>
     </div>
   </div>
-
-  <!-- <div class="set-12">
-    <div class="set-8 col-rgt-3">
-      <div class="set-12 header-card">
-        <mat-card>
-          <div class="image-box imghldr">
-            <mat-icon *ngIf="!image">panorama</mat-icon>
-            <img *ngIf="image" [src]="image" style="cursor: pointer" (click)="popImageViewer()" />
-
-            <div class="info">
-              <div class="actions">
-                <p>Relevancia ciudadana</p>
-                <p class="votes">{{ stats.score }} / 100</p>
-
-                <button *ngIf="userVoted" mat-raised-button color="primary" disabled style="background-color: #d9d9d9">
-                  Votos: {{ votes }}
-                </button>
-                <button *ngIf="!userVoted" mat-raised-button color="black" style="
-                    background-color: #71f5ad;
-                    font-weight: 600;
-                    font-size: 16px;
-                  " (click)="openModalVote()">
-                  Votar
-                </button>
-                <mat-spinner diameter="20" *ngIf="submitted"></mat-spinner>
-              </div>
-            </div>
-          </div>
-
-          <div class="data-box">
-            <p class="title">{{ topic.title }}</p>
-            <expanded-text [text]="topic.description" [minLength]="400" [title]="topic.title">
-            </expanded-text>
-          </div>
-
-          <div *ngIf="!isFavorites" class="favorites-button">
-            <button mat-icon-button style="background-color: #d9d9d9" color="warn"
-              aria-label="Example icon button with a heart icon" (click)="addFavorites()">
-              <mat-icon>favorite</mat-icon>
-            </button>
-          </div>
-
-          <div *ngIf="isFavorites" class="favorites-button">
-            <button mat-icon-button color="warn" style="background-color: #e98282"
-              aria-label="Example icon button with a heart icon" (click)="removeFavorites()">
-              <mat-icon>favorite</mat-icon>
-            </button>
-          </div>
-        </mat-card>
-      </div>
-
-      <div class="set-12 mt-2">
-        <solutions-card [data]="SolutionDataSource"></solutions-card>
-      </div>
-    </div>
-
-    <div class="set-4">
-      <public-documents-testimonials [data]="topic.testimonials"></public-documents-testimonials>
-    </div>
-  </div> -->
 </div>
