--- a/src/app/hub/sign-in/sign-in.component.scss
+++ b/src/app/hub/sign-in/sign-in.component.scss
@@ -129,4 +129,13 @@
   .emailsignin {
     color: #71F5AD;
   }
+
+  .loading {
+    mat-spinner {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
 }
