--- a/src/app/public-documents/topic/topic.component.html
+++ b/src/app/public-documents/topic/topic.component.html
@@ -85,10 +85,10 @@
               (click)="popAddCommentsDialog()">
               <mat-icon>add_comment</mat-icon>
             </button>
-            <button type="button" mat-mini-fab color="warn" matTooltip="Agregar testimonio" matTooltipClass="tooltip"
+            <!-- <button type="button" mat-mini-fab color="warn" matTooltip="Agregar testimonio" matTooltipClass="tooltip"
               (click)="openModalTestimony(null)">
               <mat-icon>book</mat-icon>
-            </button>
+            </button> -->
           </div>
         </div>
 
