--- a/src/app/components/add-document-testimony/add-document-testimony.component.scss
+++ b/src/app/components/add-document-testimony/add-document-testimony.component.scss
@@ -1,8 +1,63 @@
 :host {
-  .form-body {
-    margin-top: 20pt;
+  padding: 20px;
+  float: left;
+  width: 70%;
+  margin: 0 15%;
 
-    > * {
+  ::ng-deep .mat-step-header:hover,
+  ::ng-deep .mat-step-header {
+    background: transparent !important;
+  }
+
+  .mat-stepper-horizontal,
+  .mat-stepper-vertical {
+    background: transparent !important;
+  }
+
+  ::ng-deep .mat-form-field-appearance-outline .mat-form-field-wrapper {
+    margin: 0;
+  }
+
+  ::ng-deep .angular-editor-toolbar {
+    background: transparent !important;
+    border: 0 !important;
+    border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1) !important;
+    padding: 10px !important;
+  }
+
+  // ::ng-deep .angular-editor-textarea {
+  //   resize: none !important;
+  // }
+
+  ::ng-deep .angular-editor .angular-editor-wrapper .angular-editor-textarea {
+    background: transparent !important;
+    margin: 0 !important;
+    border: 0 !important;
+    outline: none !important;
+    padding: 10px !important;
+  }
+
+  ::ng-deep .angular-editor .angular-editor-wrapper .angular-editor-placeholder {
+    padding: 10px !important;
+  }
+
+  .dialog-head {
+    display: flex;
+    align-items: center;
+  }
+
+  .dialog-body {
+    margin-top: 20px;
+  }
+
+  .editor-form {
+    margin-bottom: 20px;
+    background: #ffffff;
+    border-radius: 5px;
+  }
+
+  .form-body {
+    >* {
       margin: 0;
     }
 
@@ -73,37 +128,68 @@
         }
       }
     }
-    .visibility-container {
-      width: 200px;
-      height: 50px;
+  }
+
+  .anon {
+    .set-12 {
       display: flex;
       align-items: center;
-      position: relative;
-      left: 383px;
-      bottom: 17px;
-      .visibility {
-        width: 25%;
-        height: 80%;
-        margin-right: 2px;
+
+      * {
+        margin: 0;
       }
-      small {
-        margin: 0px;
+
+      mat-icon {
+        margin-right: 10px;
+        font-size: 13pt;
       }
     }
   }
-  .submit-button {
-    display: block;
-    margin: 0 auto;
-    margin-top: -5pt;
-  }
-}
 
-.messageError {
-  color: red;
-  margin-right: 20%;
-  display: block;
-  width: 100%;
-  text-align: center;
-  margin-bottom: 20px;
-  margin-top: -34px;
+  .ctrls {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-top: 20px;
+
+    * {
+      margin: 0;
+    }
+
+    button {
+      margin-left: 10px;
+    }
+
+    button:first-child {
+      margin-left: 0;
+    }
+
+    mat-spinner {
+      margin-left: 20px;
+    }
+  }
+
+  .upload-img {
+    width: 150px;
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+    overflow: hidden;
+    // border: 1px dashed rgba(0, 0, 0, 0.3);
+    background: #1e7e7f;
+
+    mat-icon {
+      font-size: 40pt !important;
+      color: #f44336;
+    }
+  }
+
+  .file-hldr {
+    font-weight: bold;
+    font-style: italic;
+    margin: 40px 0;
+    text-align: center;
+  }
 }
