--- a/src/app/public-documents/components/testimonials/testimonials.component.scss
+++ b/src/app/public-documents/components/testimonials/testimonials.component.scss
@@ -1,18 +1,27 @@
 :host {
+  position: relative;
+
   .emptyhldr {
     .ctrls {
       margin-top: 20px;
     }
   }
 
+  .ctrls-add {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    z-index: 11;
+  }
+
   .testimonials {
     width: 100%;
     overflow: auto;
 
-    mat-icon {
-      font-size: 70pt;
-      color: rgba($color: #000000, $alpha: 0.1);
-    }
+    // mat-icon {
+    //   font-size: 70pt;
+    //   color: rgba($color: #000000, $alpha: 0.1);
+    // }
 
     .title-card {
       font-size: 13pt;
@@ -65,6 +74,9 @@
 
         .leading {
           width: 20%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
 
           img {
             width: 100%;
