--- a/src/app/components/public-document-mobile-top-ten/public-document-mobile-top-ten.component.scss
+++ b/src/app/components/public-document-mobile-top-ten/public-document-mobile-top-ten.component.scss
@@ -32,6 +32,12 @@
     .item:last-child {
       margin-bottom: 0;
     }
+
+    // &.empty {
+    //   button {
+    //     margin-top: 20px;
+    //   }
+    // }
   }
 
   .linker {
