--- a/src/app/components/public-document-mobile-category-bars/public-document-mobile-category-bars.component.html
+++ b/src/app/components/public-document-mobile-category-bars/public-document-mobile-category-bars.component.html
@@ -1,5 +1,4 @@
 <button type="button" class="placebtn" *ngIf="document.coverage.length > 1" (click)="displayCoverageMenu()">
-  <!-- <mat-icon>place</mat-icon> -->
   <img src="../../../assets/images/mapa-mex.png" [alt]="document.title">
 </button>
 
@@ -9,7 +8,12 @@
 
 <div class="set-12 bars">
   <div class="set-12 inner-bar" *ngFor="let layout of layouts">
-    <div class="grayback" [style.width]="layout.stats.score + '%'">
+    <!-- <div class="grayback" [style.width]="layout.stats.score + '%'">
+      <button type="button" class="fav">
+        <mat-icon>favorite</mat-icon>
+      </button>
+    </div> -->
+    <div class="grayback">
       <button type="button" class="fav">
         <mat-icon>favorite</mat-icon>
       </button>
