--- a/src/app/components/public-document-mobile-category-bars/public-document-mobile-category-bars.component.scss
+++ b/src/app/components/public-document-mobile-category-bars/public-document-mobile-category-bars.component.scss
@@ -60,12 +60,12 @@
 
     .grayback {
       height: 44px;
-      // width: 10%;
+      width: calc(100% - 20px);
       background: rgba(255, 255, 255, 0.5);
       position: absolute;
       top: 0;
       left: 0;
-      z-index: 7;
+      z-index: 4;
       border-top-right-radius: 50px;
       border-bottom-right-radius: 50px;
       display: flex;
@@ -75,22 +75,24 @@
     }
 
     .gradbar {
-      height: 24px;
+      height: 17px;
       max-width: calc(100% - 70px);
       width: calc(43% - 20px);
       background: linear-gradient(180deg, #71F5AD 0%, #0EAA70 100%);
       border-radius: 50px;
-      margin: 0 0 0 20px;
+      margin: 13px 0 0 20px;
       position: relative;
-      z-index: 4;
+      z-index: 7;
     }
 
     .catname {
       // width: calc(40% - 70px);
       position: absolute;
+      top: 3px;
+      left: 0;
       display: flex;
       align-items: center;
-      margin-left: 35px;
+      margin-left: 20px;
       z-index: 9;
       font-weight: bold;
       color: #131313;
