--- a/src/app/public-documents/category/category.component.html
+++ b/src/app/public-documents/category/category.component.html
@@ -2,6 +2,7 @@
   <mat-spinner></mat-spinner>
 </div>
 
+<!-- desktop -->
 <div class="set-12" *ngIf="isDataAvailable && !isMobile">
   <breadcrumbs-component>
     <li>Documentos</li>
@@ -84,6 +85,9 @@
   </div>
 </div>
 
+<!-- mobile -->
 <div class="set-12" *ngIf="isDataAvailable && isMobile">
-  <div class="public-document-mobile-category-view" [category]="selectedCategory"></div>
+  <div class="public-document-mobile-category-view" [document]="document" [category]="selectedCategory"
+    [topSolutions]="topSolutions"></div>
+  <div class="public-document-mobile-fixed-tools"></div>
 </div>
