--- a/src/app/public-documents/topic/topic.component.html
+++ b/src/app/public-documents/topic/topic.component.html
@@ -2,7 +2,8 @@
   <mat-spinner></mat-spinner>
 </div>
 
-<div class="set-12" *ngIf="isDataAvailable">
+<!-- desktop -->
+<div class="set-12" *ngIf="isDataAvailable && !isMobile">
   <div class="set-12">
     <breadcrumbs-component>
       <li>...</li>
@@ -104,4 +105,9 @@
       </public-documents-testimonials>
     </div>
   </div>
+</div>
+
+<!-- mobile -->
+<div class="set-12" *ngIf="isDataAvailable && isMobile">
+  <div class="public-document-mobile-topic-view" [topic]="topic" [user]="user"></div>
 </div>
