--- a/src/app/hub/single-user/single-user.component.html
+++ b/src/app/hub/single-user/single-user.component.html
@@ -70,6 +70,14 @@
 
 
 <!--Mobile-->
-<div class="set-12 innerhldr" *ngIf="isDataAvailable && isMobile">My profile
-  
+<div class="set-12 innerhldr " *ngIf="isDataAvailable && isMobile">
+ 
+  <mat-tab-group class="">
+    <mat-tab label="Temas">Content 1</mat-tab>
+    <mat-tab label="Profile">Content 2</mat-tab>
+    <mat-tab label="Comunidad">Content 3</mat-tab>
+    <mat-tab label="Metas">Content 4</mat-tab>
+   
+  </mat-tab-group>
+
 </div>
