--- a/src/app/hub/single-user/single-user.component.scss
+++ b/src/app/hub/single-user/single-user.component.scss
@@ -164,4 +164,19 @@
       margin-bottom: 0;
     }
   }
+  .mat-tab-group ::ng-deep .mat-tab-header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .mat-tab-group ::ng-deep .mat-tab-header .mat-tab-header-pagination {
+    display: none;
+  }
+  ::ng-deep .mat-tab-label {
+   font-size: 16px;
+  }
+
 }
+
