--- a/src/app/hub/components/tabs-mobile/tabs-mobile.component.html
+++ b/src/app/hub/components/tabs-mobile/tabs-mobile.component.html
@@ -1,1 +1,22 @@
-<p>tabs-mobile works!</p>
+<div>
+
+    <mat-tab-group>
+        <mat-tab label="Temas">
+            <search-input-mobile></search-input-mobile>
+            <card-topics-mobile></card-topics-mobile>
+        </mat-tab>
+        <mat-tab label="Profile">
+            <search-input-mobile></search-input-mobile>
+            <spider-chart></spider-chart>
+        </mat-tab>
+        <mat-tab label="Comunidad">
+        <community-mobile></community-mobile>
+        </mat-tab>
+        <mat-tab class="achieve" label="Metas">
+            <div class="achieve-title">Metas Logradas</div>
+            <div class="mt-1">Participa, invita y denuncia</div>
+            <card-topics-mobile></card-topics-mobile>
+        </mat-tab>
+
+    </mat-tab-group>
+</div>
