--- a/src/app/hub/components/tabs-mobile/tabs-mobile.component.html
+++ b/src/app/hub/components/tabs-mobile/tabs-mobile.component.html
@@ -7,7 +7,7 @@
         </mat-tab>
         <mat-tab label="Profile">
             <search-input-mobile></search-input-mobile>
-            <spider-chart></spider-chart>
+            <spider-chart-mobile></spider-chart-mobile>
         </mat-tab>
         <mat-tab label="Comunidad">
         <community-mobile></community-mobile>
