add menu profile

--- a/src/app/hub/components/spider-chart-mobile/spider-chart-mobile.component.html
+++ b/src/app/hub/components/spider-chart-mobile/spider-chart-mobile.component.html
@@ -1,1 +1,10 @@
-<p>spider-chart-mobile works!</p>
+<div>
+  <canvas
+    id="canvas"
+    baseChart
+    [data]="spiderData"
+    [options]="spiderChartOptions"
+    [type]="spiderChartType"
+  >
+  </canvas>
+</div>
